src/components/axes/css/style.css
:host {
  /*
    This is the initial padding applied to both axes
    It should be overwritten with the actual padding values once we know how
    much space the axes labels will take up

    We set an initial padding size to a reasonable value so that elements don't
    change their position too much when the axes labels are added
  */
  --x-axis-padding: 2em;
  --y-axis-padding: 2em;

  min-height: calc(128px + var(--y-axis-padding)) !important;

  &::part(grid) {
    color: lightblue;
    stroke-width: 1;
    opacity: 0.4;
  }

  &::part(tick) {
    color: black;
    stroke-width: 1;
  }
}

slot {
  display: inherit;
  height: 100%;
  min-height: 0px;

  padding-left: var(--x-axis-padding);
  padding-bottom: var(--y-axis-padding);
}

#axes-svg {
  position: absolute;
  width: auto;
  height: auto;
  overflow: visible;

  padding-left: var(--x-axis-padding);
  padding-bottom: var(--y-axis-padding);

  /*
    The axes lines will be hidden behind the spectrogram if we do not set
    z-index to one
  */
  z-index: 1;

  line {
    shape-rendering: crispEdges;
  }

  text {
    fill: var(--oe-font-color);
    stroke: none;
    font: 11px sans-serif;
  }

  g {
    stroke: currentColor;
  }
}

